--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "About me", icon: home}
-  - {file: "CV.pdf", title: CV}
+  - {file: "index.html", icon: home}
+  - {file: "CV_Eng.pdf", title: CV}
   - {file: "README.md", title: "Publications"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
