--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:giacomo.tendas@mq.edu.au"}
-  - {title: Github, icon: github, url: "https://github.com/gtendas"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: MQ page, icon: university, url: "https://researchers.mq.edu.au/en/persons/giacomo-tendas"}
+  - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0003-1001-6690"}
+  - {title: Scholar, icon: user-graduate, url: "https://scholar.google.com/citations?user=VEFYpBMAAAAJ&hl=it"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
