--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: About, icon: user, file: "index.md"}
-  - {file: "papers.md", title: Papers, icon: scroll }
+  - {title: Papers, icon: scroll, file: "papers.md"}
+  - {title: Talks, icon: desktop, file: "talks.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:giacomo.tendas@mq.edu.au"}
