--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ date_format: "%B %d, %Y"
 show_excerpts: false       # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
-minimal: false             # use a dark header
+minimal: true             # use a dark header
 
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: About, icon: user, file: "index.md"}
-  - {title: Papers, icon: scroll, file: "papers.md"}
-  - {title: Talks, icon: desktop, file: "talks.md"}
+  - {title: About, file: "index.md"}
+  - {title: Papers, file: "papers.md"}
+  - {title: Talks, file: "talks.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:giacomo.tendas@mq.edu.au"}
