--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Giacomo Tendas"
 author: "Giacomo Tendas"
-description: "giacomo.tendas@mq.edu.au"
+description: "giacomo.tendas[at]mq.edu.au"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
