--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ external:                  # shows a footer with social links - for available ic
   - {title: MQ page, icon: university, url: "https://researchers.mq.edu.au/en/persons/giacomo-tendas"}
   - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0003-1001-6690"}
   - {title: Scholar, icon: user-graduate, url: "https://scholar.google.com/citations?user=VEFYpBMAAAAJ&hl=it"}
-  - {title: Clocks, icon: , file: "orologi.md"}
+  - {title: , icon: , file: "orologi.md"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
