--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:tendasg@math.muni.cz"}
-  - {title: MQ page, icon: university, url: "https://researchers.mq.edu.au/en/persons/giacomo-tendas"}
+  - {title: Muni page, icon: university, url: "https://bioheterocycles.chemi.muni.cz/en/about-us/faculty-staff/242140-giacomo-tendas"}
   - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0003-1001-6690"}
   - {title: Scholar, icon: user-graduate, url: "https://scholar.google.com/citations?user=VEFYpBMAAAAJ&hl=it"}
 #  - {title: "-", file: "orologi.md"}
