--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: Home, file: "index.md"}
   - {title: CV, file: "cv.md"}
   - {title: Papers, file: "papers.md"}
-  - {title: Talks, file: "talks.md"}
+  - {title: Other, file: "talks.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:tendasg@math.muni.cz"}
