--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ external:                  # shows a footer with social links - for available ic
   - {title: Muni page, icon: university, url: "https://www.muni.cz/en/people/242140"}
   - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0003-1001-6690"}
   - {title: Scholar, icon: user-graduate, url: "https://scholar.google.com/citations?user=VEFYpBMAAAAJ&hl=it"}
-#  - {title: "-", file: "orologi.md"}
+  - {title: "-", icon: fa-regular fa-clock, file: "orologi.md"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
