--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Giacomo Tendas"
 author: "Giacomo Tendas"
-description: "tendasg<i icon="clock"></i>math.muni.cz"
+description: "tendasg<i class="clock"></i>math.muni.cz"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
