--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: "  ", file: "orologi.md"}
   - {title: Mail, icon: envelope, url: "mailto:giacomo.tendas@manchester.ac.uk"}
-  - {title: Muni page, icon: university, url: "https://gtendas.github.io/"}
+  - {title: Muni page, icon: university, url: "https://research.manchester.ac.uk/en/persons/giacomo-tendas"}
   - {title: ORCID, icon: orcid, url: "https://orcid.org/0000-0003-1001-6690"}
   - {title: Scholar, icon: user-graduate, url: "https://scholar.google.com/citations?user=VEFYpBMAAAAJ&hl=it"}
 comments:
